--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=5">
 </head>
-<script src="scripts/script.js"></script>
+<script src="/scripts/script.js"></script>
 <body>
     <section id="menu">
         <div id="menu-items">
