--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section id="about">
         <div id="about-items">
-            <div class="about-title">ABOUT</div>
+            <div class="title">ABOUT</div>
             <div class="about-paragraph">I'm an independent breakcore producer. I have been classically trained in music for over seven years and decided to continue with electronic 
                 music production since late 2023.</div>
             <div class="about-paragraph">If you are looking for erkhes.dc in VALORANT, click <a class="valink" href="https://erkhesval.carrd.co/">here</a>.</div>
@@ -32,7 +32,7 @@
 
     <section id="discography">
         <div id="discography-items">
-            <div class="discography-title">DISCOGRAPHY</div>
+            <div class="title">DISCOGRAPHY</div>
             <div class="discography-item">【<a class="valink" href="https://erkhesdc.bandcamp.com/album/instrumentality" target="_blank">instrumentality</a>】</div>
         </div>
         <a id="card" target="_blank" href="https://erkhesdc.bandcamp.com/album/instrumentality">
@@ -44,6 +44,7 @@
 
     <section>
         <div id="socials">
+            <div class="title">SOCIALS</div>
             <div id="socials-items">
                 <a class="socials-item" href="https://twitter.com/erkhesdc" target="_blank">Twitter</a>
                 <a class="socials-item" href="" target="_blank">Spotify</a>
