--- a/index.html
+++ b/index.html
@@ -42,17 +42,15 @@
         
     </section>
 
-    <section>
-        <div id="socials">
-            <div class="title">SOCIALS</div>
-            <div id="socials-items">
-                <a class="socials-item" href="https://twitter.com/erkhesdc" target="_blank">Twitter</a>
-                <a class="socials-item" href="" target="_blank">Spotify</a>
-                <a class="socials-item" href="" target="_blank">YouTube Music</a>
-                <a class="socials-item" href="" target="_blank">iTunes</a>
-                <a class="socials-item" href="https://erkhesdc.bandcamp.com/" target="_blank">Bandcamp</a>
-                <a class="socials-item" href="https://soundcloud.com/erkhesdc" target="_blank">Soundcloud</a>
-            </div>
+    <section id="socials">
+        <div class="title">SOCIALS</div>
+        <div id="socials-items">
+            <a class="socials-item" href="https://twitter.com/erkhesdc" target="_blank">Twitter</a>
+            <a class="socials-item" href="" target="_blank">Spotify</a>
+            <a class="socials-item" href="" target="_blank">YouTube Music</a>
+            <a class="socials-item" href="" target="_blank">iTunes</a>
+            <a class="socials-item" href="https://erkhesdc.bandcamp.com/" target="_blank">Bandcamp</a>
+            <a class="socials-item" href="https://soundcloud.com/erkhesdc" target="_blank">Soundcloud</a>
         </div>
         <footer id="disclaimer">
             erkhes.dc does not seek to commercial gains in his music, i.e. all music is and will be licensed under CC BY-SA 3.0.
