--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a class="socials-item" href="https://soundcloud.com/erkhesdc" target="_blank">Soundcloud</a>
         </div>
         <footer id="disclaimer">
-            erkhes.dc does not seek to commercial gains in his music, i.e. all music is and will be licensed under CC BY-SA 3.0.
+            erkhes.dc does not seek to commercial gains in his music.
         </footer>
     </section>
 
