--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>erkhes.dc</title>
     <link rel="stylesheet" href="/styles/style.css">
-    <link rel="icon" type="image/x-icon" href="/assets/favi.ico" />
+    <link rel="icon" type="image/x-icon" href="/assets/SEELE_Logo__28NGE_29-removebg-preview.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap"/>
