--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <section id="socials">
         <div id="socials-items">
             <a class="socials-item" href="https://twitter.com/erkhesdc" target="_blank">Twitter</a>
-            <a class="socials-item" href="" target="_blank">Spotify</a>
-            <a class="socials-item" href="" target="_blank">YouTube Music</a>
-            <a class="socials-item" href="" target="_blank">iTunes</a>
+            <a class="socials-item" href="https://open.spotify.com/artist/1WguYp4HD3gucyDpFsgQkP" target="_blank">Spotify</a>
+            <a class="socials-item" href="" target="_blank">YouTube</a>
+            <a class="socials-item" href="https://music.apple.com/us/artist/erkhes-dc/1763649793" target="_blank">Apple Music</a>
             <a class="socials-item" href="https://erkhesdc.bandcamp.com/" target="_blank">Bandcamp</a>
             <a class="socials-item" href="https://soundcloud.com/erkhesdc" target="_blank">Soundcloud</a>
         </div>
