--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
     <section id="about">
         <div id="about-items">
             <div class="title">ABOUT</div>
-            <div class="about-paragraph">I'm an independent breakcore producer. I have been classically trained in music for over seven years and decided to continue with electronic 
-                music production since late 2023.</div>
-            <div class="about-paragraph">If you are looking for erkhes.dc in VALORANT, click <a class="valink" href="https://erkhesval.carrd.co/">here</a>.</div>
+            <div class="about-paragraph">Mongolian-American based in Washington, D.C.</div>
+            <!-- <div class="about-paragraph">If you are looking for erkhes.dc in VALORANT, click <a class="valink" href="https://erkhesval.carrd.co/">here</a>.</div> -->
         </div>
     </section>
 
